@@ -42,6 +42,7 @@ v13.0.00
 		Messenger: fixed formatting of Sent From Gibbon tag
 		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
 		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
+		Planner: fixed out of place > in Chrome in unit deploy
 		School Admin: fixed timezone issue in managing special days
 		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
 		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
